setting swagger
